# imlib2

./: AUTHORS  ChangeLog  README.in  TODO  configure.ac  imlib2.spec.in
src/modules/: Makefile.am
